# gpionext-dev

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  install.sh  project_log.md  remove.sh  requirements.txt  setup.sh  update.sh  usr-bin-gpionext
.github/workflows/: build.yml  main.yml
conductor/: phase-2.md  phase-3.md
core/: Cargo.toml  pyproject.toml
core/src/: bitmask.rs  gpio.rs  i2c.rs  lib.rs  uinput.rs
python/: gpionext.py
python/config/: SQL.py  constants.py
python/ui/: config_manager.py  live_pin_view.py
python/ui/cursesmenu/cursesmenu/: curses_menu.py  multi_selection_menu.py  selection_menu.py
tests/: test_multi_selection_menu.py  test_pcf8574_config.py
