[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gpionext_core"
# Minimum Python that ships with Pi OS Bullseye (Pi 2B target)
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# Module name as imported in Python: import gpionext_core
module-name = "gpionext_core"
features = ["pyo3/extension-module"]
